--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # -----------------------------------------------------------------------------
 
 title: blank # the website title (if blank, full name will be used instead)
-first_name: Luc
+first_name: 
 middle_name:
-last_name: Esprabens
+last_name: Luc Esprabens
 email: lme56@cornell.edu
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
