--- a/_config.yml
+++ b/_config.yml
@@ -97,8 +97,8 @@ facebook_id: # your facebook id
 youtube_id: # your youtube channel id (youtube.com/@<youtube_id>)
 discord_id: # your discord id (18-digit unique numerical identifier)
 
-contact_note: >
-  Email is the best way to contact me.
+#contact_note: >
+#  Email is the best way to contact me.
 
 # -----------------------------------------------------------------------------
 # Analytics and search engine verification
